src/app/header/header.component.scss
@import '../../commonStyles.scss';

.header {
	display: flex;
	justify-content: space-between;
	position: fixed;
	top: 0;
	z-index: 10;
	width: 100%;
	height: 50px;
	background-color: $primary-color;
}

.logo {
	object-fit: contain;
	padding-left: 5%;
}

.menu {
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	text-align: center;
	padding-right: 5%;
	height: 100%;
	width: 40%;

	&__item {
		text-decoration: none;
		color: white;
		font-size: 1.35rem;
		font-weight: 400;
		padding: 0 16px;

		&:hover {
			text-decoration: underline;
		}

		&--active {
			font-weight: 700;
		}
	}
}

.hamburguer-icon {
	display: none;
}

@media (max-width: 1024px) {
	.menu {
		height: 100%;
		width: 50%;

		&__item {
			font-size: 1.2rem;
			padding: 0 14px;
		}
	}
}

@media (max-width: 768px) {
	.menu {
		width: 60%;

		&__item {
			font-size: 1.1rem;
			padding: 0 12px;
		}
	}
}

@media (max-width: 480px) {
	.header {
		flex-direction: column;
		justify-content: center;
		align-items: center;
		height: auto;
		padding-right: 0%;
	}

	.logo {
		padding-left: 0%;
	}

	.menu {
		display: none;
		height: 100%;
		width: 40%;
		flex-direction: column;
		align-items: center;
		text-align: center;
		padding-right: 0%;
		transition: all 0.5s linear;

		&__item {
			font-size: 1rem;
			font-weight: 400;
			padding: 10px 0;
		}
	}

	.hamburguer-icon {
		display: flex;
		position: absolute;
		top: 20px;
		right: 20px;
	}

	.open {
		display: flex;
	}
}

